# arxiv-agent

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
arxiv_agent/: __init__.py  __main__.py  client.py  db.py  downloader.py  embeddings.py  ingest.py  models.py  nlp.py
notebooks/: demo.py
tests/: test_db.py  test_downloader.py  test_embed_integration.py  test_embeddings.py  test_ingest.py  test_nlp.py
